kubernetes/overlays/jdk/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-with-quarkus
spec:
  template:
    spec:
      containers:
      - name: code-with-quarkus
        image: quay.io/redhat-telco-adoption/serverless-troubleshooting:1.0.1-jdk
        resources:
          limits:
            memory: 768Mi
          requests:
            memory: 384Mi
